# RoboNavPlanner

./: .gitignore  CMakeLists.txt  HOW_TO_RUN_SFML.md  README.md  compile.bat  compile_console.bat  compile_demo.bat
data/config/: pso_config.json
data/maps/: map.txt
docs/: execution_output.md  project_detailed.md  run.md  算法解耦重构总结.md
include/: Common.h
include/algorithm/: IPathPlanningAlgorithm.h
include/config/: ConfigManager.h
src/: main.cpp  main_console.cpp
src/algorithm/: AStarAlgorithm.h  HybridAStarPSOAlgorithm.h  ZPSOAlgorithm.h
src/config/: ConfigManager.cpp
src/core/: Common.h  Map.cpp  Map.h  PathPlanner.cpp  PathPlanner.h
src/visualization/: Visualizer.cpp  Visualizer.h
tests/: debug_include.cpp  debug_include2.cpp  test_point_unification.cpp  test_version.cpp
